--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
-    "wav": "^1.0.2"
+    "wav": "^1.0.2",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
